2007-02-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : removed some operator
	implementations from the low-level interface
	* interfaces/python/package/__init__.py : added addition, subtraction,
	multiplication operators with the usual semantics

2007-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c
	(igraph_transitivity_avglocal_undirected)
	(igraph_transitivity_local_undirected)
	(igraph_transitivity_undirected) : corrected overflow bug

2007-02-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector_ptr.c (igraph_vector_ptr_remove) : replaced
	memcpy with memmove

	* src/igraph.h (igraph_i_lazy_adjlist_t, igraph_i_lazy_adjlist_get) :
	added
	* src/adjlist.c (igraph_i_lazy_adjlist_init)
	(igraph_i_lazy_adjlist_destroy, igraph_i_lazy_adjlist_get_real) :
	added
	
2007-02-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/adjlist.c (igraph_i_adjlist_simplify) : added
	* src/structural_properties.c (igraph_transitivity_undirected) :
	rewritten to be faster for graphs with skewed degree distribution

	* src/structural_properties.c 
	(igraph_transitivity_avglocal_undirected) : rewritten to be faster
	on graphs with skewed degree distribution, it also handles
	multiple and loop edges well, it ignores them.
	
2007-02-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cores.c (igraph_k_cores) : renamed to igraph_coreness

2007-01-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph_trie.c (igraph_trie_check) : added
	* src/foreign-graphml.c : fixed a bug when reading a graph with
	invalid attribute keys
	* examples/simple/test.gxl : extended to include an invalid attribute
	* examples/simple/igraph_trie.c : added test case for
	igraph_trie_check

2007-01-26  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign-graphml.c : now supports graph attributes
	* src/type_indexededgelist.c (igraph_empty_attrs) : added
	* src/igraph.h : updated
	
	* src/attributes.c (igraph_i_attribute_init) : added attr parameter