@@ -1,3 +1,8 @@
+2007-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/structural_properties.c (igraph_transitivity_local_undirected) :
+	rewritten to use lazy adjacency lists
+
 2007-02-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* interfaces/python/src/graphobject.c : removed some operator
